--- a/client/main.less
+++ b/client/main.less
@@ -1,1 +1,26 @@
 @import "{}/imports/ui/stylesheets/not-found.less";
+
+html, body{
+    height: 100%;
+}
+
+.weui_tabbar_icon{
+    text-align: center;
+}
+.weui_tabbar_icon  .fa{
+    color: #999;
+}
+.weui_bar_item_on .weui_tabbar_icon  .fa{
+    color: #09BB07;
+}
+.weui_tabbar_icon  .fa:before{
+    font-size: 24px;
+}
+
+.weui_tab_bd_item h2{
+    color: #888;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    padding: 40% 0;
+}
